--- a/frontend/public/assets/i18n/sr-hr-bs-cg.json
+++ b/frontend/public/assets/i18n/sr-hr-bs-cg.json
@@ -18,5 +18,8 @@
     "categories": "Kategorije",
     "publisher": "Objavljeno od",
     "call": "Pozovi",
-    "sendMessage": "Pošalji poruku"
+    "sendMessage": "Pošalji poruku",
+    "tel-num": "Broj telefona",
+    "telNumError": "Unesite validan broj telefona",
+    "username": "Korisničko ime"
 }
