login radi sa tokenima, drugaciji navbar u zavisnosti da li je korisnik logovan

--- a/frontend/public/assets/i18n/en.json
+++ b/frontend/public/assets/i18n/en.json
@@ -21,5 +21,7 @@
     "sendMessage": "Send message",
     "tel-num": "Phone number",
     "telNumError": "Enter a valid phone number",
-    "username": "Username"
+    "username": "Username",
+    "usernameError": "Username is already taken"
+
 }
