--- a/frontend/public/assets/i18n/sr-hr-bs-cg.json
+++ b/frontend/public/assets/i18n/sr-hr-bs-cg.json
@@ -4,7 +4,7 @@
     "stores": "Prodavnice",
     "marketing": "Marketing",
     "help": "Pomoć",
-    "login": "Prijava",
+    "login": "Prijavi se",
     "register": "Registracija",
     "firstName": "Ime",
     "lastName": "Prezime",
@@ -21,5 +21,6 @@
     "sendMessage": "Pošalji poruku",
     "tel-num": "Broj telefona",
     "telNumError": "Unesite validan broj telefona",
-    "username": "Korisničko ime"
+    "username": "Korisničko ime",
+    "usernameError": "Korisničko ime je već zauzeto"
 }
