--- a/frontend/public/assets/i18n/mk.json
+++ b/frontend/public/assets/i18n/mk.json
@@ -4,7 +4,7 @@
     "stores": "Prodavnice",
     "marketing": "Marketing",
     "help": "Pomoć",
-    "login": "Prijava",
+    "login": "Prijavi se",
     "register": "Registracija",
     "firstName": "Ime",
     "lastName": "Prezime",
@@ -19,5 +19,7 @@
     "sendMessage": "Isprati poraka",
     "tel-num": "Broj telefona",
     "telNumError": "Vnesete validen broj telefona",
-    "username": "Korisničko ime"
+    "username": "Korisničko ime",
+    "usernameError": "Korisničko ime je već zauzeto"
+
 }
