prikazivanje profila logovanog korisnika

--- a/frontend/public/assets/i18n/en.json
+++ b/frontend/public/assets/i18n/en.json
@@ -22,6 +22,8 @@
     "tel-num": "Phone number",
     "telNumError": "Enter a valid phone number",
     "username": "Username",
-    "usernameError": "Username is already taken"
+    "usernameError": "Username is already taken",   
+    "profile": "My profile",
+    "logout": "Logout"
 
 }
