--- a/frontend/public/assets/i18n/mk.json
+++ b/frontend/public/assets/i18n/mk.json
@@ -20,6 +20,8 @@
     "tel-num": "Broj telefona",
     "telNumError": "Vnesete validen broj telefona",
     "username": "Korisničko ime",
-    "usernameError": "Korisničko ime je već zauzeto"
+    "usernameError": "Korisničko ime je već zauzeto",
+    "profile": "Moj profil",
+    "logout": "Odjavi se"
 
 }
