--- a/frontend/public/assets/i18n/en.json
+++ b/frontend/public/assets/i18n/en.json
@@ -18,5 +18,7 @@
     "categories": "Categories",
     "publisher": "Published by",
     "call": "Call",
-    "sendMessage": "Send message"
+    "sendMessage": "Send message",
+    "contact": "Contact us",
+    "about": "About us"
 }
