--- a/frontend/public/assets/i18n/si.json
+++ b/frontend/public/assets/i18n/si.json
@@ -17,5 +17,7 @@
     "categories": "Kategorije",
     "publisher": "Objavil",
     "call": "Pokliči",
-    "sendMessage": "Pošlji sporočilo"
+    "sendMessage": "Pošlji sporočilo",
+    "contact": "Kontakt",
+    "about": "O nas"
 }
