--- a/frontend/public/assets/i18n/mk.json
+++ b/frontend/public/assets/i18n/mk.json
@@ -16,5 +16,7 @@
     "categories": "Kategorije",
     "publisher": "Objaveno od",
     "call": "Javete se",
-    "sendMessage": "Isprati poraka"
+    "sendMessage": "Isprati poraka",
+    "contact": "Kontakt",
+    "about": "Za nas"
 }
