Revert "poruke nije dovrseno"
This reverts commit 9e7f55f001ca1bbcf514b453e567b9c3a6e33e6a.

--- a/frontend/public/assets/i18n/en.json
+++ b/frontend/public/assets/i18n/en.json
@@ -21,6 +21,7 @@
     "sendMessage": "Send message",
     "contact": "Contact us",
     "about": "About us",
+    "sendMessage": "Send message",
     "tel-num": "Phone number",
     "telNumError": "Enter a valid phone number",
     "username": "Username",
