--- a/frontend/public/assets/i18n/mk.json
+++ b/frontend/public/assets/i18n/mk.json
@@ -16,6 +16,7 @@
     "categories": "Kategorije",
     "publisher": "Objaveno od",
     "call": "Javete se",
+    "sendMessage": "Isprati poraka",
     "contact": "Kontakt",
     "about": "Za nas",
     "sendMessage": "Isprati poraka",
