--- a/frontend/public/assets/i18n/sr-hr-bs-cg.json
+++ b/frontend/public/assets/i18n/sr-hr-bs-cg.json
@@ -21,6 +21,7 @@
     "sendMessage": "Pošalji poruku",
     "contact": "Kontakt",
     "about": "O nama",
+    "sendMessage": "Pošalji poruku",
     "tel-num": "Broj telefona",
     "telNumError": "Unesite validan broj telefona",
     "username": "Korisničko ime",
