Reapply "poruke nije dovrseno"
This reverts commit 7177f08644fabc3d0200f0b91bbd1d3f4e844dac.

--- a/frontend/public/assets/i18n/en.json
+++ b/frontend/public/assets/i18n/en.json
@@ -19,6 +19,8 @@
     "publisher": "Published by",
     "call": "Call",
     "sendMessage": "Send message",
+    "contact": "Contact us",
+    "about": "About us",
     "tel-num": "Phone number",
     "telNumError": "Enter a valid phone number",
     "username": "Username",
