--- a/frontend/public/assets/i18n/sr-hr-bs-cg.json
+++ b/frontend/public/assets/i18n/sr-hr-bs-cg.json
@@ -19,6 +19,8 @@
     "publisher": "Objavljeno od",
     "call": "Pozovi",
     "sendMessage": "Pošalji poruku",
+    "contact": "Kontakt",
+    "about": "O nama",
     "tel-num": "Broj telefona",
     "telNumError": "Unesite validan broj telefona",
     "username": "Korisničko ime",
