--- a/frontend/public/assets/i18n/mk.json
+++ b/frontend/public/assets/i18n/mk.json
@@ -16,6 +16,8 @@
     "categories": "Kategorije",
     "publisher": "Objaveno od",
     "call": "Javete se",
+    "contact": "Kontakt",
+    "about": "Za nas",
     "sendMessage": "Isprati poraka",
     "tel-num": "Broj telefona",
     "telNumError": "Vnesete validen broj telefona",
