footer i poruke prevod popravljeni

--- a/frontend/public/assets/i18n/en.json
+++ b/frontend/public/assets/i18n/en.json
@@ -26,6 +26,10 @@
     "username": "Username",
     "usernameError": "Username is already taken",   
     "profile": "My profile",
-    "logout": "Logout"
+    "logout": "Logout",
+    "newMessage": "New message",
+    "send": "Send",
+    "copyRight": "© 2024 Merkat. All rights reserved"
+
 
 }
