--- a/frontend/public/assets/i18n/mk.json
+++ b/frontend/public/assets/i18n/mk.json
@@ -24,6 +24,10 @@
     "username": "Korisničko ime",
     "usernameError": "Korisničko ime je već zauzeto",
     "profile": "Moj profil",
-    "logout": "Odjavi se"
+    "logout": "Odjavi se",
+    "newMessage": "Nova poraka",
+    "send": "Prati",
+    "copyRight": "© 2024 Merkat. Site prava se zadržani"
+
 
 }
