--- a/frontend/public/assets/i18n/sr-hr-bs-cg.json
+++ b/frontend/public/assets/i18n/sr-hr-bs-cg.json
@@ -26,5 +26,8 @@
     "username": "Korisničko ime",
     "usernameError": "Korisničko ime je već zauzeto",
     "profile": "Moj profil",
-    "logout": "Odjavi se"
+    "logout": "Odjavi se",
+    "newMessage": "Nova poruka",
+    "send": "Pošalji",
+    "copyRight": "© 2024 Merkat. Sva prava zadržana"
 }
