--- a/frontend/public/assets/i18n/si.json
+++ b/frontend/public/assets/i18n/si.json
@@ -20,12 +20,15 @@
     "sendMessage": "Pošlji sporočilo",
     "contact": "Kontakt",
     "about": "O nas",
-    "sendMessage": "Pošlji sporočilo",
     "tel-num": "Telefonska številka",
     "telNumError": "Vnesite veljavno telefonsko številko",
     "username": "Uporabniško ime",
     "usernameError": "Uporabniško ime je že zasedeno",
     "profile": "Moj profil",
-    "logout": "Odjavi se"
+    "logout": "Odjavi se",
+    "newMessage": "Novo sporočilo",
+    "send": "Pošlji",
+    "copyRight": "© 2024 Merkat. Vse pravice pridržane"
+
 
 }
