--- a/frontend/public/assets/i18n/mk.json
+++ b/frontend/public/assets/i18n/mk.json
@@ -53,6 +53,13 @@
     "subcategory": "Podkategorija",
     "selectSubcategory": "Izaberite podkategoriju",
     "valueRequired": "Ovo polje je obavezno",
-    "createListingSuccess": "Oglas je uspešno kreiran"
+    "createListingSuccess": "Oglas je uspešno kreiran",
+    "filterby": "Filtrirajte spored",
+    "resetfilter": "Resetirajte go filterot",
+    "titleRequired": "Naslov e zadolžitelen",
+    "uploadImages": "Prikačete sliki",
+    "maxImages": "Može da se prikačat najmnogu 5 sliki!"
+
+
 
 }
