--- a/frontend/public/assets/i18n/mk.json
+++ b/frontend/public/assets/i18n/mk.json
@@ -58,7 +58,11 @@
     "resetfilter": "Resetirajte go filterot",
     "titleRequired": "Naslov e zadolžitelen",
     "uploadImages": "Prikačete sliki",
-    "maxImages": "Može da se prikačat najmnogu 5 sliki!"
+    "maxImages": "Može da se prikačat najmnogu 5 sliki!",
+    "chooseImages": "Izberete sliki",
+    "deleteListing": "Izbrišite go oglasot"
+
+
 
 
 
