--- a/frontend/public/assets/i18n/sr-hr-bs-cg.json
+++ b/frontend/public/assets/i18n/sr-hr-bs-cg.json
@@ -60,7 +60,11 @@
     "updateListing": "Ažuriraj oglas",
     "titleRequired": "Naslov je obavezan",
     "uploadImages": "Dodaj slike",
-    "maxImages": "Najviše 5 slika se može dodati!"
+    "maxImages": "Najviše 5 slika se može dodati!",
+    "chooseImages": "Izaberi slike",
+    "deleteListing": "Obriši oglas"
+
+
 
 
 
