--- a/frontend/public/assets/i18n/mk.json
+++ b/frontend/public/assets/i18n/mk.json
@@ -60,10 +60,17 @@
     "uploadImages": "Prikačete sliki",
     "maxImages": "Može da se prikačat najmnogu 5 sliki!",
     "chooseImages": "Izberete sliki",
-    "deleteListing": "Izbrišite go oglasot"
+    "deleteListing": "Izbrišite go oglasot",
 
+    "sortby": "Sortiraj po",
+    "priceasc": "Cena (Nisko visoko)",
+    "pricedesc": "Cena (Visoko nisko)",
 
-
-
+    "filterbyprice": "Filtriraj po ceni",
+    "from": "Od",
+    "minPrice": "Minimalna cena",
+    "maxPrice": "Maksimalna cena",
+    "to": "Do",
+    "apply": "Primeni"
 
 }
