fixed homepage responsivnes, and some css

--- a/frontend/public/assets/i18n/en.json
+++ b/frontend/public/assets/i18n/en.json
@@ -81,6 +81,7 @@
     "contact-info": "Contact information",
     "phone": "Phone",
     "invalidEmail": "Invalid e-mail address",
-    "attributes": "Attributes"
+    "attributes": "Attributes",
+    "filters": "Show filters"
 
 }
