--- a/frontend/public/assets/i18n/si.json
+++ b/frontend/public/assets/i18n/si.json
@@ -80,5 +80,6 @@
     "contact-info": "Kontaktne informacije",
     "phone": "Telefon",
     "invalidEmail": "Neveljaven e-poštni naslov",
-    "attributes": "Atributi"
+    "attributes": "Atributi",
+    "filters": "Prikaži filtre"
 }
