--- a/frontend/public/assets/i18n/sr-hr-bs-cg.json
+++ b/frontend/public/assets/i18n/sr-hr-bs-cg.json
@@ -84,5 +84,6 @@
     "contact-info": "Kontakt informacije",
     "phone": "Telefon",
     "invalidEmail": "Neispravna e-pošta",
-    "attributes": "Atributi"
+    "attributes": "Atributi",
+    "filters": "Prikaži filtere"
 }
