--- a/frontend/public/assets/i18n/mk.json
+++ b/frontend/public/assets/i18n/mk.json
@@ -78,5 +78,6 @@
     "contact-info": "Kontakt informacii",
     "phone": "Telefon",
     "invalidEmail": "Vnesete validna e-pošta adresa",
-    "attributes": "Atributi"
+    "attributes": "Atributi",
+    "filters": "Prikazhi filteri"
 }
